--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Training datasets
+chess-games.zip
+
+# API key
+kaggle.json
+
+# venv
+chess_env/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
